external-crates/move/move-compiler/tests/move_check/parser/ability_modifier_postfix_no_abilities_with_semi.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifier_postfix_no_abilities_with_semi.move:5:19
  │
5 │     struct Foo {} has;
  │                   ^^^
  │                   │
  │                   Unexpected 'has'
  │                   Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/ability_modifier_postfix_no_abilities_with_semi.move:5:19
  │
5 │     struct Foo {} has;
  │                   ^^^  not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

